Top bar content truncated. Fixes #1418

--- a/AzureFunctions.AngularClient/src/app/top-bar/top-bar.component.scss
+++ b/AzureFunctions.AngularClient/src/app/top-bar/top-bar.component.scss
@@ -80,11 +80,15 @@
     }
 
     .info-azure{
-        margin-left: 145px;
+        margin-left: 265px;
     }
 
     .info-standalone{
         margin-left: 50px;
+    }
+
+    .info-no-iframe {
+        margin-left: 145px !important;
     }
 }
 
